--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.renjuki.renjukiweb">
+    package="com.renjuki.renjuki2">
    <application
-        android:label="renjukiweb"
+        android:label="renjuki2"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
