--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fluttertoast: ^8.1.1
   dartz: ^0.10.1
   get_it: ^7.2.0
+#  flutter_svg: ^2.0.6
 
 dev_dependencies:
   flutter_test:
