--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dartz: ^0.10.1
   get_it: ^7.2.0
   carousel_slider: ^4.2.1
+
+  firebase_auth: ^4.6.2
 #  flutter_svg: ^2.0.6
 
 dev_dependencies:
