--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^7.2.0
   carousel_slider: ^4.2.1
   firebase_auth: ^4.6.2
+  firebase_core: ^2.13.1
 
 #  flutter_svg: ^2.0.6
 
