--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   carousel_slider: ^4.2.1
   firebase_auth: ^4.6.2
   firebase_core: ^2.13.1
+  go_router: ^9.0.0
+  firebase_ui_auth: ^1.5.0
 
 #  flutter_svg: ^2.0.6
 
