--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.2'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -46,6 +46,7 @@ dependencies:
   firebase_auth: ^4.6.2
   firebase_core: ^2.13.1
   go_router: ^9.0.0
+  google_fonts: ^5.1.0
 
 #  flutter_svg: ^2.0.6
 
@@ -105,6 +106,8 @@ flutter:
   fonts:
       - family: IconBroken
         fonts:
-          - asset: fonts/icons.ttf
+         - asset: fonts/icons.ttf
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
