--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^2.13.1
   go_router: ^9.0.0
   google_fonts: ^5.1.0
+  photo_view: ^0.14.0
 
 #  flutter_svg: ^2.0.6
 
