--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
+  bloc: ^8.1.2
   equatable: ^2.0.5
   progressive_image: ^2.0.0
   url_launcher: ^6.1.7
