--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   go_router: ^11.1.4
   google_fonts: ^6.1.0
   photo_view: ^0.14.0
+  cloud_firestore: ^4.10.0
 
 #  flutter_svg: ^2.0.6
 
