--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.5
   progressive_image: ^2.0.0
   url_launcher: ^6.1.7
+  url_launcher_web: 2.0.20
   fluttertoast: ^8.1.1
   dartz: ^0.10.1
   get_it: ^7.2.0
