--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   dartz: ^0.10.1
   get_it: ^7.2.0
   carousel_slider: ^4.2.1
+  uuid: ^4.1.0
   firebase_auth: ^4.6.2
   firebase_core: ^2.13.1
   go_router: ^11.1.4
@@ -52,6 +53,7 @@ dependencies:
   photo_view: ^0.14.0
   # cloud_firestore: ^4.10.0
   cloud_firestore: ^4.9.1
+  firebase_storage: ^11.4.1
 
 
 #  flutter_svg: ^2.0.6
